# routes/api/v1/users.js
@@ -2,11 +2,19 @@ const express = require('express');
 const router = express.Router();
 
 const { getUsers, addUser, getUserById, updateUserById, deleteUserById} = require("../../../controllers/users");
+const { getOrdersByUser, addOrderByUser, deleteAllOrdersByUser } = require("../../../controllers/orders");
+const { getCartItemsByUser, addCartItemsByUser, deleteAllCartItemsByUser } = require("../../../controllers/cartItems");
 
 router.get('/', getUsers);
 router.post('/', addUser);
 router.get('/:userId', getUserById);
 router.put('/:userId', updateUserById);
 router.delete('/:userId', deleteUserById);
+router.get('/:userId/cart-items', getCartItemsByUser);
+router.post('/:userId/cart-items', addCartItemsByUser);
+router.delete('/:userId/cart-items', deleteAllCartItemsByUser);
+router.get('/:userId/orders', getOrdersByUser);
+router.post('/:userId/orders', addOrderByUser);
+router.delete('/:userId/orders', deleteAllOrdersByUser);
 
 module.exports = router;
